# NO-DOWNTIME

./: .gitignore  CNAME  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  NO-DOWNTIME.MD  PORT-SERVICES-PORTAL.MD  PRODUCT-FEATURES.MD  PRODUCT-ROADMAP.MD  README.md  SECURITY-LAYER.MD  STARTING-POINT.MD  WALK-THROUGH.MD  WEB-UI-IMPLEMENTATION.MD  index.html
k8s/: deployment.yaml  pdb.yaml  service.yaml
src/: auth.rs  cache.rs  circuit_breaker.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  oauth2.rs  rate_limiter.rs  rbac.rs  retry.rs  server.rs  tracing.rs
tests/: auth_tests.rs  cache_tests.rs  circuit_breaker_tests.rs  health_check_tests.rs  integration_test.rs  metrics_tests.rs  oauth2_tests.rs  rate_limiter_tests.rs  rbac_tests.rs  retry_tests.rs  server_tests.rs  tls_tests.rs  tracing_tests.rs
web-ui/: Cargo.toml  README.md  RUNNING.md  app.html  build.bat  build.sh  index.html  minimal.html  server.js  simple.html  test.html
web-ui/assets/css/: styles.css
web-ui/src/: app.rs  lib.rs  main.rs  utils.rs
web-ui/src/components/: auth_panel.rs  config_panel.rs  dashboard.rs  health_monitor.rs  metrics_view.rs  mod.rs  monitoring.rs
web-ui/src/services/: auth.rs  config.rs  health.rs  metrics.rs  mod.rs
