[package]
name = "no-downtime-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
config = "0.13"
hyper = "1.0"
rand = "0.8"
jsonwebtoken = "9.0"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.1", features = ["trace"] }
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
rustls = "0.21"
rustls-pemfile = "1.0"
axum-server = { version = "0.5", features = ["tls-rustls"] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"